--- a/ConnectFour/package.json
+++ b/ConnectFour/package.json
@@ -8,5 +8,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.39.0"
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
   }
 }
